// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`property input 1`] = `
<input
  className="form-control"
  disabled={undefined}
  id="textInputField"
  onChange={[Function]}
  placeholder={undefined}
  type="text"
  value="text"
/>
`;

exports[`property input 2`] = `
<input
  className="form-control"
  disabled={undefined}
  id="textInputField"
  onChange={[Function]}
  placeholder={undefined}
  type="text"
  value=""
/>
`;

exports[`property select 1`] = `
<div
  className="Select Select--single is-clearable is-searchable has-value"
  style={undefined}
>
  <input
    disabled={false}
    name="selectField"
    type="hidden"
    value="vanilla"
  />
  <div
    className="Select-control"
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={undefined}
  >
    <span
      className="Select-multi-value-wrapper"
      id="react-select-2--value"
    >
      <div
        className="Select-value"
        style={undefined}
        title={undefined}
      >
        <span
          aria-selected="true"
          className="Select-value-label"
          id="react-select-2--value-item"
          role="option"
        >
          Vanilla
        </span>
      </div>
      <div
        className="Select-input"
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <style
          dangerouslySetInnerHTML={
            Object {
              "__html": "input#undefined::-ms-clear {display: none;}",
            }
          }
        />
        <input
          aria-activedescendant="react-select-2--value"
          aria-describedby={undefined}
          aria-expanded="false"
          aria-haspopup="false"
          aria-label={undefined}
          aria-labelledby={undefined}
          aria-owns=""
          className={undefined}
          id={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          role="combobox"
          style={
            Object {
              "boxSizing": "content-box",
              "width": "5px",
            }
          }
          tabIndex={undefined}
          value=""
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          
        </div>
      </div>
    </span>
    <span
      aria-label="Clear value"
      className="Select-clear-zone"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      title="Clear value"
    >
      <span
        className="Select-clear"
        dangerouslySetInnerHTML={
          Object {
            "__html": "&times;",
          }
        }
      />
    </span>
    <span
      className="Select-arrow-zone"
      onMouseDown={[Function]}
    >
      <span
        className="Select-arrow"
        onMouseDown={[Function]}
      />
    </span>
  </div>
</div>
`;
